# numbers-cli

./: README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/numbers_cli/: __init__.py  cli.py  errors.py  mcp_server.py  paths.py  render.py  router.py
src/numbers_cli/engine/: __init__.py  app_engine.py  parser_engine.py
src/numbers_cli/jxa/: numbers_ops.js
src/numbers_cli/layers/: __init__.py  l1_view.py  l2_dom.py  l3_raw.py
src/numbers_cli/ops/: __init__.py  batch.py  dump.py  merge.py
src/numbers_cli/skill/: SKILL.md  __init__.py
src/numbers_cli/skill/references/: architecture.md  command-reference.md  format-notes.md  mcp-tools.md  tool-install-guide.md
tests/: conftest.py  test_app_engine_detection.py  test_engine_and_layers.py  test_ops_and_cli.py  test_paths.py
